[package]
name = "nave"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
documentation = "https://docs.rs/nave"
repository = "https://github.com/psiace/nave"
homepage = "https://github.com/psiace/nave"
description = "Thinking about the construction of distributed systems starting from the *consistent hash* algorithm."
readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["consistent-hashing", "hash-ring", "nave"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*"
]

[dependencies]
twox-hash = "1.5.0"

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
